# -*- Makefile -*-
#
# Copyright (c)      2008  Sandia Corporation
#

EXTRA_DIST = autogen.sh README NEWS TODO\
	patches/rdma-bw-xrc-v1.diff \
	patches/rdmacm-xrc-v3.diff \
	portals4-ib.spec .indent.pro \
	example/Makefile \
	example/hello.c

SUBDIRS = doc include src test

ACLOCAL_AMFLAGS = -I config
